--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,15 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="profile">Profile</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="re_password">Re Password</string>
+    <string name="full_name">Full Name</string>
+    <string name="save">Save</string>
+    <string name="logout">Logout</string>
+    <string name="delete_account">Delete Account</string>
+    <string name="choose_an_option">Choose an option</string>
+    <string name="start_new_quiz">Start new Quiz</string>
+    <string name="view_previous">View previous</string>
 </resources>
